[package]
name = "icepeek-app"
description = "App common lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#argh = { version = "0.1.3" }
bitcoin = "0.32.0"
crossbeam-channel = { version = "0.5.6" }
chrono = { version = "0.4", features = ["std"], default-features = false }
coldcard = { version = "0.5", default-features = false, features = ["linux-static-libusb"] }
kyoto-cbf = "0.5.0"
# kyoto-cbf = { path = "/home/optout/prog/bitcoin/kyoto" }
log = { version = "0.4", features = ["std"] }
thiserror = { version = "1.0" }
tokio = "1.38"
bip39 = "2.0.0"
