[package]
name = "icepeek-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icepeek-app = { verson = "0.1.0", path = "../icepeek-app" }
tokio = "1.38"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
