[package]
name = "icepeek-iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
iced = "0.12.1"
icepeek-app = { verson = "0.1.0", path = "../icepeek-app" }
once_cell = "1.19.0"
tokio = "1.40"
